--- a/treinamento javascript 01/index.html
+++ b/treinamento javascript 01/index.html
@@ -18,28 +18,39 @@
         <h2 class="sr-only">Balanço</h2>
 
         <div class="balance__card">
-          <h3>Entradas</h3>
+          <h3>
+            <span>Entradas</span>
+            <img src="./assets/income.svg" alt="imagem de entradas">
+          </h3>
           <p>R$ 5.000,00</p>
         </div>
 
         <div class="balance__card">
-          <h3>Saídas</h3>
+          <h3>
+            <span>Saídas</span>
+            <img src="./assets/expense.svg" alt="imagem de saídas">
+          </h3>
           <p>R$ 2.000,00</p>
         </div>
 
         <div class="balance__card total">
-          <h3>Total</h3>
+          <h3>
+            <span>Total</span>
+            <img src="./assets/total.svg" alt="imagem de total">
+          </h3>
           <p>R$ 3.000,00</p>
         </div>
       </section>
       <section id="transaction">
         <h2 class="sr-only">Transações</h2>
+        <a href="#" id="transaction__new-transaction">+ Nova Transação</a>
         <table id="transaction__data-table">
           <thead>
             <tr>
               <th>Descrição</th>
               <th>Valor</th>
               <th>Data</th>
+              <th></th>
             </tr>
           </thead>
 
@@ -48,21 +59,36 @@
               <td class="transaction__description">Luz</td>
               <td class="transaction__expense">- R$ 500,00</td>
               <td class="transaction__date">21/01/2021</td>
+              <td>
+                <img src="./assets/minus.svg" alt="imagem de simbolo negativo">
+              </td>
             </tr>
             <tr>
               <td class="transaction__description">Criação website</td>
               <td class="transaction__income">R$ 2000,00</td>
               <td class="transaction__date">21/01/2021</td>
+              <td>
+                <img src="./assets/minus.svg" alt="imagem de simbolo negativo">
+              </td>
             </tr>
             <tr>
               <td class="transaction__description">Internet</td>
               <td class="transaction__expense">- R$ 200,00</td>
               <td class="transaction__date">21/01/2021</td>
+              <td>
+                <img src="./assets/minus.svg" alt="imagem de simbolo negativo">
+              </td>
             </tr>
           </tbody>
         </table>
       </section>
     </main>
+    
+    <div class="modal-overlay active">
+      <div class="modal">
+          OI Modal
+      </div>
+    </div>
 
     <footer>
       <p>dev.finance$</p>
