--- a/treinamento javascript 01/index.html
+++ b/treinamento javascript 01/index.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css" />
+    <script src="./scripts.js"></script>
     <title>dev.finance$</title>
   </head>
 
   <body>
     <header>
-      <img src="./assets/logo.svg" alt="logo dev finances">
+      <img src="./assets/logo.svg" alt="logo dev finances" />
     </header>
 
     <main class="container">
@@ -20,7 +21,7 @@
         <div class="balance__card">
           <h3>
             <span>Entradas</span>
-            <img src="./assets/income.svg" alt="imagem de entradas">
+            <img src="./assets/income.svg" alt="imagem de entradas" />
           </h3>
           <p>R$ 5.000,00</p>
         </div>
@@ -28,7 +29,7 @@
         <div class="balance__card">
           <h3>
             <span>Saídas</span>
-            <img src="./assets/expense.svg" alt="imagem de saídas">
+            <img src="./assets/expense.svg" alt="imagem de saídas" />
           </h3>
           <p>R$ 2.000,00</p>
         </div>
@@ -36,14 +37,16 @@
         <div class="balance__card total">
           <h3>
             <span>Total</span>
-            <img src="./assets/total.svg" alt="imagem de total">
+            <img src="./assets/total.svg" alt="imagem de total" />
           </h3>
           <p>R$ 3.000,00</p>
         </div>
       </section>
       <section id="transaction">
         <h2 class="sr-only">Transações</h2>
-        <a href="#" id="transaction__new-transaction">+ Nova Transação</a>
+        <a href="#" 
+        onclick="Modal.open()"
+        id="transaction__new-transaction">+ Nova Transação</a>
         <table id="transaction__data-table">
           <thead>
             <tr>
@@ -60,7 +63,10 @@
               <td class="transaction__expense">- R$ 500,00</td>
               <td class="transaction__date">21/01/2021</td>
               <td>
-                <img src="./assets/minus.svg" alt="imagem de simbolo negativo">
+                <img
+                  src="./assets/minus.svg"
+                  alt="imagem de simbolo negativo"
+                />
               </td>
             </tr>
             <tr>
@@ -68,7 +74,10 @@
               <td class="transaction__income">R$ 2000,00</td>
               <td class="transaction__date">21/01/2021</td>
               <td>
-                <img src="./assets/minus.svg" alt="imagem de simbolo negativo">
+                <img
+                  src="./assets/minus.svg"
+                  alt="imagem de simbolo negativo"
+                />
               </td>
             </tr>
             <tr>
@@ -76,17 +85,61 @@
               <td class="transaction__expense">- R$ 200,00</td>
               <td class="transaction__date">21/01/2021</td>
               <td>
-                <img src="./assets/minus.svg" alt="imagem de simbolo negativo">
+                <img
+                  src="./assets/minus.svg"
+                  alt="imagem de simbolo negativo"
+                />
               </td>
             </tr>
           </tbody>
         </table>
       </section>
     </main>
-    
-    <div class="modal-overlay active">
+
+    <div class="modal-overlay">
       <div class="modal">
-          OI Modal
+        <div id="modal__form">
+          <h2>Nova Transação</h2>
+          <form action="">
+            <div class="modal__form__input-group">
+              <label class="sr-only" for="description">Descrição</label>
+              <input
+                type="text"
+                id="description"
+                name="description"
+                placeholder="Descrição"
+              />
+            </div>
+            <div class="modal__form__input-group">
+              <label class="sr-only" for="amount">Valor</label>
+              <input
+                type="number"
+                step="0.01"
+                id="amount"
+                name="amount"
+                placeholder="0,00"
+              />
+              <small class="help"
+                >Use o sinal - (negativo) para despesas e , (vírgula) para casas
+                decimais
+              </small>
+            </div>
+            <div class="modal__form__input-group">
+              <label class="sr-only" for="date">Data</label>
+              <input
+                type="date"
+                id="date"
+                name="date"
+              />
+            </div>
+            <div class="modal__form__input-group actions">
+              <a href="#" 
+              onclick="Modal.close()"
+              class="modal__form__input-group__button cancel">Cancelar</a>
+              <button>Salvar</button>
+            </div>
+          </form>
+        </div>
       </div>
     </div>
 
