alteração no backend para a data ser enviada via body

--- a/treinamento javascript 01/index.html
+++ b/treinamento javascript 01/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./styles.css" />
     <script src="./scripts.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js" integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/locale/pt-br.min.js" integrity="sha512-1IpxmBdyZx3okPiZ14mzw6+pOGa690uDmcdjqvT310Kwv3NRcjvL/aOtoSprEyvkDdAb7ZtM2um6KrLqLOY97w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <title>dev.finance$</title>
   </head>
 
@@ -57,9 +58,41 @@
               <th></th>
             </tr>
           </thead>
-
+            
           <tbody>
-
+            <tr>
+              <td class="transaction__description">Luz</td>
+              <td class="transaction__expense">- R$ 500,00</td>
+              <td class="transaction__date">21/01/2021</td>
+              <td>
+                <img
+                  src="./assets/minus.svg"
+                  alt="imagem de simbolo negativo"
+                />
+              </td>
+            </tr>
+            <tr>
+              <td class="transaction__description">Criação website</td>
+              <td class="transaction__income">R$ 2000,00</td>
+              <td class="transaction__date">21/01/2021</td>
+              <td>
+                <img
+                  src="./assets/minus.svg"
+                  alt="imagem de simbolo negativo"
+                />
+              </td>
+            </tr>
+            <tr>
+              <td class="transaction__description">Internet</td>
+              <td class="transaction__expense">- R$ 200,00</td>
+              <td class="transaction__date">21/01/2021</td>
+              <td>
+                <img
+                  src="./assets/minus.svg"
+                  alt="imagem de simbolo negativo"
+                />
+              </td>
+            </tr>
           </tbody>
         </table>
       </section>
